--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
   <body>
     <header>
-      <h1>Random Quotes</h1>
+      <h1>'The Office' Quote Generator</h1>
       <button id="load" class="load-quote">Show another quote</button>
     </header>
 
     <div class="container">
       <div id="quote-box" class="quote-box">
-        <p class="quote">Every great developer you know got there by solving problems they were unqualified to solve until they actually did it.</p>
-        <p class="source">Patrick McKenzie<span class="citation">Twitter</span><span class="year">2016</span></p>
+        <p class="quote">Bears, Beets, Battlestar Galactica.</p>
+        <p class="source">Jim Halpert<span class="citation">The Office</span><span class="year">2007</span></p>
       </div>
     </div>
     
